cpu-mem-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod-cpu-mem
   labels:
      app: myapp
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
     resources:
        requests:
          memory: "128Mi"
          cpu: "0.5m"
        limits:
          memory: "512Mi"
          cpu: "1m"
   - name: con2
     image: tomcat:latest
     ports:
     - containerPort: 8080
