hostpath-vol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mydep-hostpath
spec:
   replicas: 3
   selector:
      matchLabels:
        app: myapp
   template:
      metadata:
         labels:
           app: myapp
      spec:
           volumes:
           - name: myvol
             hostPath:
                path: /hdata
           containers:
           - name: con1
             image: nginx:latest
             ports:
             - containerPort: 80
             volumeMounts:
             - name: myvol
               mountPath: /data
           - name: con2
             image: tomcat:latest
             ports:
             - containerPort: 80
             volumeMounts:
             - name: myvol
               mountPath: /mydata
