nodename-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod
   labels:
      app: myapp
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   - name: con2
     image: tomcat:latest
     ports:
     - containerPort: 8080
   nodeName: node3
