security-con.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod
   labels:
      app: myapp
      env: dev
spec:
   securityContext:
       runAsUser: 1000
   containers:
   - name: con1
     image: ubuntu:latest
     command: ["sleep","1000"]
     securityContext:
       runAsUser: 2000
   - name: con2
     image: tomcat:latest
     ports:
     - containerPort: 8080
