liveness-exec.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod-liv-exec
   labels:
      app: myapp
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
     livenessProbe:
       exec:
         command:
         - cat
         - /usr/share/nginx/html/index.html
       initialDelaySeconds: 10
       periodSeconds: 5
   - name: con2
     image: tomcat:latest
     ports:
     - containerPort: 8080

---
---
apiVersion: v1
kind: Service
metadata:
   name: livexec-svc
spec:
    selector:
      app: myapp
    ports:
    - port: 80
