nodesel.yaml
apiVersion: v1
kind: Pod
metadata:
   name: nodese-pod
   labels:
      app: myapp
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   - name: con2
     image: tomcat:latest
     ports:
     - containerPort: 8080
   nodeSelector:
      cpu: intel

---
apiVersion: v1
kind: Service
metadata:
   name: nodesel-svc
spec:
    type: NodePort
    selector:
      app: myapp
    ports:
    - port: 80
      nodePort: 30123
