pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod
   labels:
      app: myapp
      env: dev
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   - name: con2
     image: tomcat:latest
     ports:
     - containerPort: 8080

---
---
apiVersion: v1
kind: Service
metadata:
   name: nodesel-svc
spec:
    type: NodePort
    selector:
      app: myapp
    ports:
    - port: 80
      nodePort: 30123
