readiness-tcp.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod-liv-http
   labels:
      app: myapp
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
     readinessProbe:
       httpGet:
         path: /
         port: 80
       initialDelaySeconds: 10
       periodSeconds: 5
   - name: con2
     image: tomcat:latest
     ports:
     - containerPort: 8080
     readinessProbe:
       tcpSocket:
         port: 80
       initialDelaySeconds: 10
       periodSeconds: 5

---
---
apiVersion: v1
kind: Service
metadata:
   name: livexec-svc
spec:
    selector:
      app: myapp
    ports:
    - port: 80
