rs.yaml
---
apiVersion: v1
kind: Service
metadata:
   name: myrc-svc
spec:
    type: NodePort
    selector:
      app: myapp
    ports:
    - port: 80
      nodePort: 30125
