wp.yaml
apiVersion: v1
kind: Pod
metadata:
   name: wordpress
   labels:
      app: myapp
spec:
   containers:
   - name: wordpress
     image: wordpress:latest
     ports:
     - containerPort: 80
   - name: mysql
     image: mysql:5.7
     ports:
     - containerPort: 3306
---
---
apiVersion: v1
kind: Service
metadata:
   name: nodesel-svc
spec:
    type: NodePort
    selector:
      app: myapp
    ports:
    - port: 80
      nodePort: 30123
