ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: my-dep
spec:
   replicas: 3
   selector:
      matchLabels:
        app: myapp
   template:
      metadata:
         labels:
           app: myapp
      spec:
           containers:
           - name: con1
             image: nginx:latest
             ports:
             - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
   name: mydep-svc
spec:
    selector:
      app: myapp
    ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  ingressClassName: nginx
  rules:
  - host: "aneesh.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mydep-svc
            port:
              number: 80
